Worked on changes

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -1,3 +1,4 @@
 {
-  "your_perfect_morning_start": "Your Perfect Morning Starts Here"
+  "your_perfect_morning_start": "Your Perfect Morning Starts Here",
+  "healthy_breakfast_baskets":"Healthy Breakfast Baskets"
 }
